# kiran-log

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.en.md  README.md  config.h.in
cmake/: FindKL.cmake
data/: CMakeLists.txt  klog-gtk3.pc.in  klog-qt5.pc.in  zlog.conf
include/: gtk3-log-i.h  qt5-log-i.h
lib/: CMakeLists.txt  zlog-ex.cpp  zlog-ex.h
qt5/: CMakeLists.txt
qt5/data/: kiran-log-qt5.pc.in
qt5/include/: log-i.h  log_i.h
qt5/src/: log.cpp  log.h
src/: CMakeLists.txt
src/gtk3/: CMakeLists.txt  log.cpp  log.h
src/qt5/: CMakeLists.txt  README.md  log.cpp  log.h
test/: CMakeLists.txt  test-gtk3.cpp  test-qt5.cpp
